Bean注入属性（在类实例化创建之后进行属性填充）以及依赖对象实现

--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>cglib</groupId>
-            <artifactId>cglib</artifactId>
-            <version>3.3.0</version>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.5.0</version>
         </dependency>
     </dependencies>
 
